--- a/register.html
+++ b/register.html
@@ -239,6 +239,7 @@
 </footer>
 
 <script src="assets/js/main.js"></script>
+<script src="firebase.js" type="module"></script>
 
     <script>
 document.getElementById("registerForm").addEventListener("submit", async (e) => {
