Revise About page content and structure
Updated the structure and content of the About page to enhance clarity and detail.

--- a/about.html
+++ b/about.html
@@ -4,40 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - iPray Global</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <nav class="navbar">
-        <h2 class="logo">iPray Global</h2>
-        <ul class="nav-links">
+    <nav>
+        <div class="logo">iPRAY GLOBAL</div>
+        <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="about.html">About</a></li>
             <li><a href="register.html">Register</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a class="active" href="about.html">About</a></li>
         </ul>
     </nav>
 </header>
 
-<section class="page-section">
-    <h1>About iPray Global</h1>
-    <p>iPray Global is a movement created to unite believers in a 24-hour prayer chain,
-       interceding for revival, nations, churches, and youth across the world.</p>
-
-    <p>Our mission is simple: gather, pray, and transform lives through the power of God.</p>
+<section class="about-section">
+    <h2>About iPray Global</h2>
+    <p>
+        iPray Global is a worldwide prayer platform uniting believers across all nations.
+        Our mission is to build a praying generation committed to kingdom advancement,
+        soul winning, and spiritual growth through intercession.
+    </p>
 
     <h3>Our Vision</h3>
-    <ul>
-        <li>Mobilize 1 million young people in prayer</li>
-        <li>Build a global prayer network</li>
-        <li>Raise intercessors for revival</li>
-    </ul>
-</section>
+    <p>To raise a community of believers praying daily for revival across the nations.</p>
 
-<footer>
-    <p>© 2025 iPray Global | All Rights Reserved</p>
-</footer>
+    <h3>Our Core Assignment</h3>
+    <ul>
+        <li>Daily intercessory prayers</li>
+        <li>Kingdom advancement and soul winning</li>
+        <li>Spiritual edification and growth</li>
+        <li>Unity across nations through the Holy Spirit</li>
+    </ul>
+
+</section>
 
 </body>
 </html>
+
