--- a/register.html
+++ b/register.html
@@ -241,50 +241,50 @@
 <script src="assets/js/main.js"></script>
 <script src="firebase.js" type="module"></script>
 
-    <script type="module">
+    <!-- Firebase -->
+<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+  import { getDatabase, ref, push, set } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyDyzpL55SSiDRcPt6Hm8IK07k79a11bmDI",
     authDomain: "ipray-global.firebaseapp.com",
+    databaseURL: "https://ipray-global-default-rtdb.firebaseio.com",
     projectId: "ipray-global",
     storageBucket: "ipray-global.firebasestorage.app",
     messagingSenderId: "762667869397",
-    appId: "1:762667869397:web:dca75780999748ef7e2e5c"
+    appId: "1:762667869397:web:5ac930cb9a9190b57e2e5c"
   };
 
   const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+  const db = getDatabase(app);
 
-  // Handle Form Submission
-  document.getElementById("registerForm").addEventListener("submit", async (e) => {
+  // FORM SUBMIT
+  document.getElementById("regForm").addEventListener("submit", function(e) {
     e.preventDefault();
 
     const name = document.getElementById("name").value;
-    const email = document.getElementById("email").value;
-    const phone = document.getElementById("phone").value;
     const country = document.getElementById("country").value;
+    const email = document.getElementById("email").value;
 
-    try {
-      await addDoc(collection(db, "registrations"), {
-        name: name,
-        email: email,
-        phone: phone,
-        country: country,
-        date: new Date()
-      });
+    const usersRef = ref(db, "registrations");
+    const newUser = push(usersRef);
 
-      alert("✅ Registration successful! God bless you.");
-      document.getElementById("registerForm").reset();
-
-    } catch (error) {
-      console.error("Error submitting form:", error);
-      alert("❌ There was an error. Please try again.");
-    }
+    set(newUser, {
+      name: name,
+      email: email,
+      country: country,
+      timestamp: new Date().toString()
+    })
+    .then(() => {
+      alert("✅ Thank you for joining! You are registered.");
+      document.getElementById("regForm").reset();
+    })
+    .catch((err) => {
+      alert("❌ Error saving data: " + err.message);
+    });
   });
 </script>
-
 
 </body>
 </html>
