--- a/register.html
+++ b/register.html
@@ -23,9 +23,9 @@
     <h2>Register to Join</h2>
     
     <form id="registrationForm">
-        <input type="text" placeholder="Full Name" required>
-        <input type="email" placeholder="Email Address" required>
-        <input type="text" placeholder="Phone Number" required>
+    <input type="text" id="name" placeholder="Full Name" required>
+    <input type="email" id="email" placeholder="Email Address" required>
+    <input type="text" id="phone" placeholder="Phone Number" required>
 
                 <!-- ✅ COUNTRY DROPDOWN -->
                     <select id="country" required>
