--- a/admin.html
+++ b/admin.html
@@ -1,101 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iPray Admin | Registrations</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 30px;
-            background: #f5f5f5;
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-        }
-
-        th, td {
-            padding: 12px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-
-        th {
-            background: #4CAF50;
-            color: white;
-        }
-
-        tr:nth-child(even) {
-            background: #f2f2f2;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: auto;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Admin Dashboard - iPray Global</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <h2>iPray Global - Registered Users</h2>
+<h2>📊 iPray Global Registration Dashboard</h2>
+<p>Total Registrations: <span id="total">Loading...</span></p>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Full Name</th>
-                    <th>Email</th>
-                    <th>Country</th>
-                    <th>Time Registered</th>
-                </tr>
-            </thead>
-            <tbody id="dataTable"></tbody>
-        </table>
-    </div>
+<table border="1">
+    <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Country</th>
+        <th>Date</th>
+    </tr>
+    <tbody id="tableBody"></tbody>
+</table>
 
-    <!-- Firebase -->
-    <script src="firebase.js" type="module"></script>
+<button onclick="downloadCSV()">Download CSV</button>
 
-    <!-- Fetch registrations -->
-    <script type="module">
-        import { getDocs, collection } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
-        async function loadData() {
-            try {
-                const querySnapshot = await getDocs(collection(db, "registrations"));
-                const table = document.getElementById("dataTable");
+    const firebaseConfig = {
+        apiKey: "AIzaSyDyzpL55SSiDRcPt6Hm8IK07k79a11bmDI",
+        authDomain: "ipray-global.firebaseapp.com",
+        databaseURL: "https://ipray-global-default-rtdb.firebaseio.com",
+        projectId: "ipray-global",
+        storageBucket: "ipray-global.firebasestorage.app",
+        messagingSenderId: "762667869397",
+        appId: "1:762667869397:web:5ac930cb9a9190b57e2e5c"
+    };
 
-                querySnapshot.forEach((doc) => {
-                    const data = doc.data();
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const tableBody = document.getElementById("tableBody");
+    const totalDisplay = document.getElementById("total");
 
-                    const row = `
-                        <tr>
-                            <td>${data.fullname}</td>
-                            <td>${data.email}</td>
-                            <td>${data.country}</td>
-                            <td>${new Date(data.timestamp.seconds * 1000).toLocaleString()}</td>
-                        </tr>
-                    `;
+    const usersRef = ref(db, "registrations");
+    onValue(usersRef, (snapshot) => {
+        tableBody.innerHTML = "";
+        let count = 0;
 
-                    table.innerHTML += row;
-                });
+        snapshot.forEach((child) => {
+            const data = child.val();
+            count++;
 
-            } catch (error) {
-                alert("Error loading data: " + error);
-            }
-        }
+            const row = `<tr>
+                <td>${data.name}</td>
+                <td>${data.email}</td>
+                <td>${data.country}</td>
+                <td>${data.timestamp}</td>
+            </tr>`;
+            tableBody.innerHTML += row;
+        });
 
-        loadData();
-    </script>
+        totalDisplay.textContent = count;
+    });
+
+    function downloadCSV() {
+        let csv = "Name,Email,Country,Date\n";
+        const rows = tableBody.querySelectorAll("tr");
+
+        rows.forEach(row => {
+            const cols = row.querySelectorAll("td");
+            const data = [...cols].map(td => td.innerText).join(",");
+            csv += data + "\n";
+        });
+
+        const blob = new Blob([csv], { type: "text/csv" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.setAttribute("href", url);
+        a.setAttribute("download", "ipray_registrations.csv");
+        a.click();
+    }
+</script>
 
 </body>
 </html>
