--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
         background: #fff;
     }
 
+    /* LIVE button — blinking and bold */
+    .live-btn {
+      background: red;
+      color: white !important;
+      padding: 8px 18px;
+      border-radius: 6px;
+      font-weight: bold;
+      animation: pulse 1s infinite;
+    }
+
+    @keyframes pulse {
+      0% { opacity: 1; }
+      50% { opacity: .4; }
+      100% { opacity: 1; }
+    }
+
     .section {
         padding: 60px 20px;
     }
@@ -56,6 +72,11 @@
         text-align: center;
         margin-top: 40px;
     }
+
+    .logo {
+        height: 55px;
+        width: auto;
+    }
 </style>
 </head>
 
@@ -64,7 +85,12 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark" style="background:#1a237e;">
   <div class="container">
-    <a class="navbar-brand" href="#">iPray Global</a>
+    
+    <!-- ✅ Replace text brand with actual logo -->
+    <a class="navbar-brand" href="index.html">
+      <img src="logo.png" class="logo" alt="iPray Global Logo">
+    </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -73,6 +99,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="live.html" class="nav-link live-btn mx-2">LIVE</a></li>
         <li class="nav-item"><a href="register.html" class="btn btn-warning ms-3">Register</a></li>
       </ul>
     </div>
@@ -124,7 +151,6 @@ var x = setInterval(function() {
 
   document.getElementById("countdown").innerHTML =
     days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
 }, 1000);
 </script>
 
